<resources>
    <string name="app_name">Shopping Pool</string>

    <!-- Strings related to login -->
    <string name="action_sign_in">Sign In</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_field_required">This field is required</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_phone">Mobile Number</string>
    <string name="title_activity_register">Register</string>

    <!-- Strings related to login -->
    <string name="prompt_password">Password</string>
    <string name="action_register">New here? Register</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="error_invalid_phone">This phone number is invalid</string>
    <string name="error_invalid_email">This email id is invalid</string>
    <string name="error_invalid_name">This name is invalid</string>
    <string name="verification_code">Verification Code</string>
    <string name="verify_btn_text">Verify</string>
    <string name="error_incorrect_credentials">Could not verify.</string>
    <string name="title_activity_settings">Settings</string>

    <string name="otp_verification_success_message">OTP Verified.</string>
    <string name="otp_verification_error_message">Incorrect OTP. Try again.</string>
    <string name="phone_exists_error">Phone number already registered.</string>
    <string name="phone_verification_cancelled">Phone number not verified. Please verify phone number to proceed.</string>
    <string name="verification_progress_dialog_message">Verifying. Please wait.</string>
    <string name="request_otp_verification">Please enter the OTP you just received and verify your mobile number to proceed.</string>
    <string name="invalid_name_error">Entered user name not valid.</string>
    <string name="phone_number_dialog_title">Phone Number</string>
    <string name="invalid_phone_error">Entered user phone not valid.</string>
    <string name="change_phone_positive_button_text">OK</string>
    <string name="change_phone_negative_button_text">Cancel</string>
    <string name="nav_text_settings">Settings</string>
    <string name="nav_text_log_out">Log Out</string>
    <string name="phone_verification_error_text">Phone cannot be verified.</string>
    <string name="phone_incorrect_error">Phone Number Incorrect.</string>

    <string name="welcome_text">Welcome To Shopping Pool</string>
    <string name="splash_logo_content_desc">Enjoy Shopping...</string>
    <string name="title_activity_login">Sign In</string>

    <!-- Strings related to Settings -->

    <!-- General Settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">Unknown</string>

    <string name="pref_title_phone_number">Phone Number</string>
    <string name="pref_default_phone_number">null</string>

    <string name="pref_header_alert">SMS Alerts</string>

    <string name="title_shop">Shop</string>
    <string name="title_budget">Budget</string>
    <string name="title_cart">Cart</string>
    <string name="title_social">Social</string>
    <string name="title_settings">Jobs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="search">Search Here</string>
    <string name="addtocart">Tap to book this Product</string>
</resources>
