<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_shop"
        android:icon="@drawable/ic_store_white_24dp"
        android:title="@string/title_shop" />

    <item
        android:id="@+id/navigation_gifts"
        android:icon="@drawable/ic_card_giftcard_white_24dp"
        android:title="@string/title_budget" />

    <item
        android:id="@+id/navigation_social"
        android:icon="@drawable/ic_social"
        android:title="@string/title_social" />

    <item
        android:id="@+id/navigation_cart"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/title_cart" />

    <item
        android:id="@+id/navigation_settings"
        android:icon="@drawable/ic_settings_white_24dp"
        android:title="@string/title_settings" />

</menu>